--- a/TasksWPF/TaskDialog.xaml
+++ b/TasksWPF/TaskDialog.xaml
@@ -11,7 +11,7 @@
         <Label Content="Termin zadania" HorizontalAlignment="Left" Margin="33,79,0,0" VerticalAlignment="Top" Width="133"/>
         <TextBox x:Name="titleTask" HorizontalAlignment="Left" Height="23" Margin="166,31,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="296"/>
         <DatePicker x:Name="dateTask" HorizontalAlignment="Left" Margin="166,79,0,0" VerticalAlignment="Top" Width="296"/>
-        <Button x:Name="okButton" Content="Ok" HorizontalAlignment="Left" Margin="113,123,0,0" VerticalAlignment="Top" Width="75" IsDefault="True"/>
+        <Button x:Name="okButton" Content="Ok" HorizontalAlignment="Left" Margin="113,123,0,0" VerticalAlignment="Top" Width="75" IsDefault="True" Click="OkButton_Click"/>
         <Button x:Name="cancelButton" Content="Cancel" HorizontalAlignment="Left" Margin="288,123,0,0" VerticalAlignment="Top" Width="74" IsCancel="True"/>
 
     </Grid>
